make clean: also remove generated image files
Change-Id: I80798e79b4ccee64f26f58f9754de02b2958e33e

--- a/OsmoBTS/Makefile
+++ b/OsmoBTS/Makefile
@@ -22,8 +22,9 @@ include $(TOPDIR)/build/Makefile.inc
 osmobts-usermanual.pdf: chapters/*.adoc
 
 clean:
-	rm -rf osmobts-usermanual__*.{svg,png}
 	rm -rf $(cleanfiles)
+	rm -rf osmobts-abis__*.{svg,png}
+	rm -rf osmobts-usermanual__*.{svg,png}
 
 gen-bts-vty-docbook: FORCE
 	$(call command,xsltproc -o generated/combined1.xml \
