add 'make check' target
Generate *.check files from asciidoc output and grep for WARNINGs.
Add *.check files to gitignore and to 'make clean'.

Change-Id: Ibccc83a3415930a528f2e8e4e4dda3b81c6d0b64

--- a/OsmoBTS/Makefile
+++ b/OsmoBTS/Makefile
@@ -23,8 +23,8 @@ osmobts-usermanual.pdf: chapters/*.adoc
 
 clean:
 	rm -rf $(cleanfiles)
-	rm -rf osmobts-abis__*.{svg,png}
-	rm -rf osmobts-usermanual__*.{svg,png}
+	rm -rf osmobts-abis__*.{svg,png,check}
+	rm -rf osmobts-usermanual__*.{svg,png,check}
 
 gen-bts-vty-docbook: FORCE
 	$(call command,xsltproc -o generated/combined1.xml \
