fix 'make clean': shell glob, ignore failure
Unfortunately a glob like osmo-x__*.{svg,png} doesn't work, so have the
suffixes in separate globs.

Add dashes to indicate that failure should be ignored.

Change-Id: I6bc4d9ea72b43a573acbc860c23397f748de2c7b

--- a/OsmoNAT/Makefile
+++ b/OsmoNAT/Makefile
@@ -16,7 +16,7 @@ docbooktotypes = pdf
 include ../build/Makefile.inc
 
 clean:
-	rm -rf $(cleanfiles)
+	-rm -rf $(cleanfiles)
 
 gen-nat-vty-docbook: FORCE
 	$(call command,xsltproc -o generated/combined1.xml \
