OsmoBTS: generate osmobts-abis.pdf again
broken by 05f5adbe837f2cbfb9301cdb8c9b454ca0bfc825

Change-Id: I7ca18e3d7fa3a5a6eac0590b919b4c664f73671c

--- a/OsmoBTS/Makefile
+++ b/OsmoBTS/Makefile
@@ -14,7 +14,7 @@ docbooktotypes = pdf
 # htmlcss =
 
 TOPDIR := ..
-ASCIIDOCS := osmobts-usermanual
+ASCIIDOCS := osmobts-usermanual osmobts-abis
 
 include $(TOPDIR)/build/Makefile.asciidoc.inc
 include $(TOPDIR)/build/Makefile.inc
