fix build: abis: re-add dependencies
Below commit accidentally removed osmobts-abis.pdf from the Makefile entirely.
The pdf was re-added, but the dependencies are still missing, so that
osmobts-abis.pdf is not rebuilt when abis/* is newer. Fix that.

Culprit: 05f5adbe837f2cbfb9301cdb8c9b454ca0bfc825
"OsmoBTS: add vty reference documentation"

Half-fix: 707827196f0734eefa74ce0c35c2ab2fe754cc4c
"OsmoBTS: generate osmobts-abis.pdf again"

Change-Id: Id2ee8177cfb8eb58409d164bdd994ef5e86ad82b

--- a/OsmoBTS/Makefile
+++ b/OsmoBTS/Makefile
@@ -19,6 +19,7 @@ ASCIIDOCS := osmobts-usermanual osmobts-abis
 include $(TOPDIR)/build/Makefile.asciidoc.inc
 include $(TOPDIR)/build/Makefile.inc
 
+osmobts-abis.pdf: abis/*.adoc abis/*.msc
 osmobts-usermanual.pdf: chapters/*.adoc
 
 clean:
