--- a/OsmoSGSN/Makefile
+++ b/OsmoSGSN/Makefile
@@ -1,43 +1,10 @@
-# XSL stylesheets downloaded from http://docbook.sourceforge.net/release/xsl/current/html/
-# Makefile from BitBake/OpenEmbedded manuals
+TOPDIR = ..
 
-EXTRA_DEPS = gen-sgsn-vty-docbook
-
-topdir = .
-sgsn_reference = $(topdir)/osmosgsn-vty-reference.xml
-manuals = $(sgsn_reference)
-# types = pdf txt rtf ps xhtml html man tex texi dvi
-# types = pdf txt
-types = $(docbooktotypes)
-docbooktotypes = pdf
-# htmlcssfile =
-# htmlcss =
-
-TOPDIR := ..
-ASCIIDOCS := osmosgsn-usermanual
-
+ASCIIDOC = osmosgsn-usermanual.adoc
+ASCIIDOC_DEPS = chapters/*.adoc
 include $(TOPDIR)/build/Makefile.asciidoc.inc
-include $(TOPDIR)/build/Makefile.inc
 
-osmosgsn-usermanual.pdf: chapters/*.adoc
+VTY_REFERENCE = osmosgsn-vty-reference.xml
+include $(TOPDIR)/build/Makefile.vty-reference.inc
 
-clean:
-	-rm -rf $(cleanfiles)
-	-rm osmosgsn-usermanual__*.svg osmosgsn-usermanual__*.png
-	-rm osmosgsn-usermanual.check
-
-gen-sgsn-vty-docbook: FORCE
-	$(call command,xsltproc -o generated/combined1.xml \
-		--stringparam with $(PWD)/../common/vty_additions.xml \
-		$(MERGE_DOC) vty/sgsn_vty_reference.xml, \
-		XSLTPROC,Merging Common VTY)
-	$(call command,xsltproc -o generated/combined2.xml \
-		--stringparam with $(PWD)/../common/ns_vty_additions.xml \
-		$(MERGE_DOC) generated/combined1.xml, \
-		XSLTPROC,Merging Common NS VTY)
-	$(call command,xsltproc -o generated/combined3.xml \
-		--stringparam with $(PWD)/vty/sgsn_vty_additions.xml \
-		$(MERGE_DOC) generated/combined2.xml, \
-		XSLTPROC,Merging SGSN VTY)
-	$(call command,xsltproc ../vty_reference.xsl generated/combined3.xml > generated/docbook_vty.xml, \
-		XSLTPROC,Converting SGSN VTY to DocBook)
+include $(TOPDIR)/build/Makefile.common.inc
