Add manual for OsmoSIPConnector
Ticket: OS#1684
Change-Id: I70d3014deb459e0b91a9a92c60710b994153538e

--- a/OsmoSIPConnector/Makefile
+++ b/OsmoSIPConnector/Makefile
@@ -1,5 +1,9 @@
 TOPDIR = ..
 
+ASCIIDOC = osmosipconnector-usermanual.adoc
+ASCIIDOC_DEPS = chapters/*.adoc
+include $(TOPDIR)/build/Makefile.asciidoc.inc
+
 VTY_REFERENCE = osmosipconnector-vty-reference.xml
 include $(TOPDIR)/build/Makefile.vty-reference.inc
 
