--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,9 +1,9 @@
-TOPDIR = ..
+OSMO_GSM_MANUALS_DIR = ..
 
 # Generate adoc file that includes all chapters
 ASCIIDOC = test-usermanual.adoc
 ASCIIDOC_DEPS =
-$(ASCIIDOC): $(TOPDIR)/common/chapters/*.adoc
+$(ASCIIDOC): $(OSMO_GSM_MANUALS_DIR)/common/chapters/*.adoc
 	echo ":gfdl-enabled:" > $@
 	echo ":program-name: Test" >> $@
 	echo "" >> $@
@@ -11,16 +11,16 @@ $(ASCIIDOC): $(TOPDIR)/common/chapters/*.adoc
 	echo "====================================" >> $@
 	echo "Oliver Smith <osmith@sysmocom.de>" >> $@
 	echo "" >> $@
-	for chapter in $(TOPDIR)/common/chapters/*.adoc; do \
+	for chapter in $(OSMO_GSM_MANUALS_DIR)/common/chapters/*.adoc; do \
 		echo "include::$${chapter}[]" >> $@; \
 	done;
 CLEAN_FILES = $(ASCIIDOC)
 
-include $(TOPDIR)/build/Makefile.asciidoc.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.asciidoc.inc
 
 VTY_REFERENCE = test-vty-reference.xml
-include $(TOPDIR)/build/Makefile.vty-reference.inc
-include $(TOPDIR)/build/Makefile.common.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.vty-reference.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.common.inc
 
 
 default: all check
