--- a/OsmoBSC/Makefile
+++ b/OsmoBSC/Makefile
@@ -1,11 +1,11 @@
-TOPDIR = ..
+OSMO_GSM_MANUALS_DIR = ..
 
 ASCIIDOC = osmobsc-usermanual.adoc osmux-reference.adoc aoip-mgw-options.adoc
-include $(TOPDIR)/build/Makefile.asciidoc.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.asciidoc.inc
 osmobsc-usermanual.pdf: chapters/*.adoc chapters/*.dot
 aoip-mgw-options.pdf: aoip-mgw-options.adoc mgw/*.msc
 
 VTY_REFERENCE = osmobsc-vty-reference.xml
-include $(TOPDIR)/build/Makefile.vty-reference.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.vty-reference.inc
 
-include $(TOPDIR)/build/Makefile.common.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.common.inc
