--- a/OsmoMGCP/Makefile
+++ b/OsmoMGCP/Makefile
@@ -1,6 +1,6 @@
-TOPDIR = ..
+OSMO_GSM_MANUALS_DIR = ..
 
 VTY_REFERENCE = osmomgcp-vty-reference.xml
-include $(TOPDIR)/build/Makefile.vty-reference.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.vty-reference.inc
 
-include $(TOPDIR)/build/Makefile.common.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.common.inc
