--- a/OsmoNITB/Makefile
+++ b/OsmoNITB/Makefile
@@ -1,10 +1,10 @@
-TOPDIR = ..
+OSMO_GSM_MANUALS_DIR = ..
 
 ASCIIDOC = osmonitb-usermanual.adoc
 ASCIIDOC_DEPS = chapters/*.adoc
-include $(TOPDIR)/build/Makefile.asciidoc.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.asciidoc.inc
 
 VTY_REFERENCE = osmonitb-vty-reference.xml
-include $(TOPDIR)/build/Makefile.vty-reference.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.vty-reference.inc
 
-include $(TOPDIR)/build/Makefile.common.inc
+include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.common.inc
