Osmo*/Makefile.am: use $(srcdir), $(top_srcdir)
Use $(srcdir) infront of all relative paths, which reference other
files in the repository. Use $(top_srcdir) as OSMO_GSM_MANUALS_DIR.
This is needed for out-of-tree building.

(moving manuals to project repositories 11/19)

Related: OS#3385
Change-Id: I2454d7507fae4e1c47458a1adf36f68e637f4bbc

--- a/OsmoBSC/Makefile.am
+++ b/OsmoBSC/Makefile.am
@@ -1,9 +1,9 @@
-OSMO_GSM_MANUALS_DIR = ..
+OSMO_GSM_MANUALS_DIR = $(top_srcdir)
 
 ASCIIDOC = osmobsc-usermanual.adoc osmux-reference.adoc aoip-mgw-options.adoc
 include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.asciidoc.inc
-osmobsc-usermanual.pdf: chapters/*.adoc chapters/*.dot
-aoip-mgw-options.pdf: aoip-mgw-options.adoc mgw/*.msc
+osmobsc-usermanual.pdf: $(srcdir)/chapters/*.adoc $(srcdir)/chapters/*.dot
+aoip-mgw-options.pdf: $(srcdir)/aoip-mgw-options.adoc $(srcdir)/mgw/*.msc
 
 VTY_REFERENCE = osmobsc-vty-reference.xml
 include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.vty-reference.inc
