--- a/OsmoNAT/Makefile.am
+++ b/OsmoNAT/Makefile.am
@@ -1,4 +1,4 @@
-OSMO_GSM_MANUALS_DIR = ..
+OSMO_GSM_MANUALS_DIR = $(top_srcdir)
 
 VTY_REFERENCE = osmonat-vty-reference.xml
 include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.vty-reference.inc
