--- a/OsmocomBB/Makefile.am
+++ b/OsmocomBB/Makefile.am
@@ -1,7 +1,7 @@
-OSMO_GSM_MANUALS_DIR = ..
+OSMO_GSM_MANUALS_DIR = $(top_srcdir)
 
 ASCIIDOC = osmocombb-usermanual.adoc
-ASCIIDOC_DEPS = chapters/*.adoc
+ASCIIDOC_DEPS = $(srcdir)/chapters/*.adoc
 include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.asciidoc.inc
 
 include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.common.inc
