*/Makefile.am: add EXTRA_DIST
Necessary for 'make distcheck': the files will otherwise not end up in
the dist archives.

(moving manuals to project repositories 17/19)

Related: OS#3385
Change-Id: I5a2d6e572d346addc8770d1331c9223a56635869

--- a/OsmoBSC/Makefile.am
+++ b/OsmoBSC/Makefile.am
@@ -1,4 +1,16 @@
 OSMO_GSM_MANUALS_DIR = $(top_srcdir)
+EXTRA_DIST = aoip-mgw-options.adoc \
+	aoip-mgw-options-docinfo.xml \
+	osmobsc-usermanual.adoc \
+	osmobsc-usermanual-docinfo.xml \
+	osmobsc-vty-reference.xml \
+	osmux-reference.adoc \
+	osmux-reference-docinfo.xml \
+	chapters \
+	message-sequences \
+	mgw \
+	om2000 \
+	vty
 
 ASCIIDOC = osmobsc-usermanual.adoc osmux-reference.adoc aoip-mgw-options.adoc
 include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.asciidoc.inc
