--- a/OsmoGSMTester/Makefile.am
+++ b/OsmoGSMTester/Makefile.am
@@ -1,4 +1,7 @@
 OSMO_GSM_MANUALS_DIR = $(top_srcdir)
+EXTRA_DIST = osmo-gsm-tester-manual.adoc \
+	osmo-gsm-tester-manual-docinfo.xml \
+	chapters
 
 ASCIIDOC = osmo-gsm-tester-manual.adoc
 ASCIIDOC_DEPS = $(srcdir)/chapters/*.adoc
