--- a/OsmoMGCP/Makefile.am
+++ b/OsmoMGCP/Makefile.am
@@ -1,4 +1,6 @@
 OSMO_GSM_MANUALS_DIR = $(top_srcdir)
+EXTRA_DIST = osmomgcp-vty-reference.xml \
+	vty
 
 VTY_REFERENCE = osmomgcp-vty-reference.xml
 include $(OSMO_GSM_MANUALS_DIR)/build/Makefile.vty-reference.inc
