--- a/OsmoMSC/Makefile.am
+++ b/OsmoMSC/Makefile.am
@@ -1,4 +1,10 @@
 OSMO_GSM_MANUALS_DIR = $(top_srcdir)
+EXTRA_DIST = osmomsc-usermanual.adoc \
+	osmomsc-usermanual-docinfo.xml \
+	osmomsc-vty-reference.xml \
+	chapters \
+	images \
+	vty
 
 ASCIIDOC = osmomsc-usermanual.adoc
 ASCIIDOC_DEPS = $(srcdir)/chapters/*.adoc
