--- a/OsmoSGSN/Makefile.am
+++ b/OsmoSGSN/Makefile.am
@@ -1,4 +1,9 @@
 OSMO_GSM_MANUALS_DIR = $(top_srcdir)
+EXTRA_DIST = osmosgsn-usermanual.adoc \
+	osmosgsn-usermanual-docinfo.xml \
+	osmosgsn-vty-reference.xml \
+	chapters \
+	vty
 
 ASCIIDOC = osmosgsn-usermanual.adoc
 ASCIIDOC_DEPS = $(srcdir)/chapters/*.adoc
