--- a/OsmoGGSN/Makefile.am
+++ b/OsmoGGSN/Makefile.am
@@ -1,4 +1,9 @@
 OSMO_GSM_MANUALS_DIR = $(top_srcdir)
+EXTRA_DIST = osmoggsn-usermanual.adoc \
+	osmoggsn-usermanual-docinfo.xml \
+	osmoggsn-vty-reference.xml \
+	chapters \
+	vty
 
 ASCIIDOC = osmoggsn-usermanual.adoc
 ASCIIDOC_DEPS = $(srcdir)/chapters/*.adoc
