--- a/OsmocomBB/Makefile.am
+++ b/OsmocomBB/Makefile.am
@@ -1,4 +1,7 @@
 OSMO_GSM_MANUALS_DIR = $(top_srcdir)
+EXTRA_DIST = osmocombb-usermanual.adoc \
+	osmocombb-usermanual-docinfo.xml \
+	chapters
 
 ASCIIDOC = osmocombb-usermanual.adoc
 ASCIIDOC_DEPS = $(srcdir)/chapters/*.adoc
