gitignore: add "make distcheck" generated files
(moving manuals to project repositories 16/19)

Related: OS#3385
Change-Id: I876b0fa08d2987d285b6d77ef13069228c8b8d37

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ m4/*.m4
 Makefile.in
 Makefile
 
+# make distcheck
+osmo-gsm-manuals-*/
+osmo-gsm-manuals-*.tar.*
+
 # symlinks to shared dirs (needed for out-of-tree builds)
 */common
 */build
