remove OsmocomBB files (now avail in osmocom-bb.git)
Files were added in osmocom-bb.git Change-Id
I7d1226d3865da9595b730b716a8d4ba07be1e0d5

Depends: osmocom-bb.git Change-Id I7d1226d3865da9595b730b716a8d4ba07be1e0d5
Related: OS#3385
Change-Id: I5a4839be7a3122ab566023a3e7b3bc955db98ba4

--- a/configure.ac
+++ b/configure.ac
@@ -29,5 +29,4 @@ AC_OUTPUT(
     Makefile
     tests/Makefile
     OsmoMGCP/Makefile
-    OsmoNAT/Makefile
-    OsmocomBB/Makefile)
+    OsmoNAT/Makefile)
