--- a/Makefile.am
+++ b/Makefile.am
@@ -7,8 +7,7 @@ BUILT_SOURCES = $(top_srcdir)/.version
 EXTRA_DIST = git-version-gen .version check-depends.sh $(share_files)
 SUBDIRS = tests \
 	OsmoMGCP \
-	OsmoNAT \
-	OsmocomBB
+	OsmoNAT
 
 $(top_srcdir)/.version:
 	echo $(VERSION) > $@-t && mv $@-t $@
