remove OsmoMGCP, OsmoNAT files (now avail in openbsc.git)
Files were added in openbsc.git Change-Id
Ibace91bc518079765e12529596a1763b6c5a04b5

Depends: openbsc.git Change-Id Ibace91bc518079765e12529596a1763b6c5a04b5
Related: OS#3385
Change-Id: Icdbdc4518b049135f18ac4a569ff5ffe4f3d5a86

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,9 +5,7 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = osmo-gsm-manuals.pc
 BUILT_SOURCES = $(top_srcdir)/.version
 EXTRA_DIST = git-version-gen .version check-depends.sh $(share_files)
-SUBDIRS = tests \
-	OsmoMGCP \
-	OsmoNAT
+SUBDIRS = tests
 
 $(top_srcdir)/.version:
 	echo $(VERSION) > $@-t && mv $@-t $@
