Makefile.common.inc: add {,un}install targets
Allow installing generated pdfs with 'make install' in all Osmocom
projects using osmo-gsm-manuals. This makes proper debian packaging of
the manuals easier.

Autotools will automatically run this file's install target, when
running 'make install' in the top source dir. Do not install anything,
when OSMO_GSM_MANUALS_NO_INSTALL is set, and set this variable for the
tests dir, so we don't install the test pdfs.

Related: OS#3899
Change-Id: I66f33172fa410681acbaef4592e9405627948705

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,6 +3,9 @@ EXTRA_DIST = test-usermanual-docinfo.xml \
 	test-vty-reference.xml \
 	vty
 
+# Do not install any of the test pdfs
+OSMO_GSM_MANUALS_NO_INSTALL = 1
+
 # Generate adoc file that includes all chapters
 ASCIIDOC = test-usermanual.adoc
 ASCIIDOC_DEPS =
