Makefile.am: proper noarch pkgconfig install dir
Don't install the noarch osmo-gsm-manuals.pc file to
$prefix/lib/x86_64-linux-gnu/pkgconfig when building a debian package
(dpkg-buildpackage seems to set $libdir accordingly). Always install to
$prefix/lib/pkgconfig.

The debian dir for creating a package from this repository will be added
in a follow up patch.

Related: OS#3899
Change-Id: I63bc8ab6d2845751079f40383d2aa92c709ce2fe

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 share_files = $(srcdir)/build $(srcdir)/common $(srcdir)/*.xsl
 share_path = "$(DESTDIR)$(prefix)/share/osmo-gsm-manuals"
 
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = osmo-gsm-manuals.pc
+noarch_pkgconfigdir = $(prefix)/lib/pkgconfig
+noarch_pkgconfig_DATA = osmo-gsm-manuals.pc
 BUILT_SOURCES = $(top_srcdir)/.version
 EXTRA_DIST = git-version-gen .version check-depends.sh $(share_files)
 SUBDIRS = tests
