debian: more explicit dependencies for debian 8
Add dh-autoreconf to build dependencies, and libxml2-utils (provides
xmllint) to dependencies. Both need to be explicitly installed on
debian 8.

Related: OS#3899
Change-Id: If929fca73e3a88567e144eb296e7fadd32904dd5

--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Oliver Smith <osmith@sysmocom.de>
 Build-Depends: autotools-dev,
+               dh-autoreconf,
                debhelper (>= 9),
                pkg-config,
 # All below also need to be in Depends
@@ -11,6 +12,7 @@ Build-Depends: autotools-dev,
                dblatex,
                docbook5-xml,
                graphviz,
+               libxml2-utils,
                mscgen,
                python,
                python-nwdiag,
@@ -27,6 +29,7 @@ Depends: ${misc:Depends},
          dblatex,
          docbook5-xml,
          graphviz,
+         libxml2-utils,
          mscgen,
          python,
          python-nwdiag,
