Makefile.am: include osmo-release.mk
Allow using the same release process, as with other Osmocom components:
https://osmocom.org/projects/cellular-infrastructure/wiki/Make_a_new_release

Related: OS#3899
Change-Id: Id31b8aa3f8c46509774c44ee027ab89862249766

--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,10 @@ AC_CONFIG_AUX_DIR([.])
 
 AM_INIT_AUTOMAKE([foreign dist-bzip2 1.6 subdir-objects])
 
+dnl include release helper
+RELMAKE='-include osmo-release.mk'
+AC_SUBST([RELMAKE])
+
 dnl checks for programs
 AC_PROG_INSTALL
 LT_INIT
