tests: pick up subdirs inside common/chapters
The Osmux documentation that will be introduced in [1] creates a
common/chapters/osmux/ subdir. Update tests/Makefile.am to pick up the
files in that directory too, so they get built by jenkins during gerrit
verification.

[1] I182d94c63f7d74ef882b77be59a95b1b7d8a4e5e
Change-Id: I4d1f440b7bfef159c98f918a2d23069594c4bc95

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,7 +9,8 @@ OSMO_GSM_MANUALS_NO_INSTALL = 1
 # Generate adoc file that includes all chapters
 ASCIIDOC = test-usermanual.adoc
 ASCIIDOC_DEPS =
-$(ASCIIDOC): $(OSMO_GSM_MANUALS_DIR)/common/chapters/*.adoc
+COMMON_CHAPTERS = $(shell find $(OSMO_GSM_MANUALS_DIR)/common/chapters -name '*.adoc')
+$(ASCIIDOC): $(COMMON_CHAPTERS)
 	echo ":gfdl-enabled:" > $@
 	echo ":program-name: Test" >> $@
 	echo "" >> $@
@@ -17,7 +18,7 @@ $(ASCIIDOC): $(OSMO_GSM_MANUALS_DIR)/common/chapters/*.adoc
 	echo "====================================" >> $@
 	echo "Oliver Smith <osmith@sysmocom.de>" >> $@
 	echo "" >> $@
-	for chapter in $(OSMO_GSM_MANUALS_DIR)/common/chapters/*.adoc; do \
+	for chapter in $(COMMON_CHAPTERS); do \
 		echo "include::$${chapter}[]" >> $@; \
 	done;
 CLEAN_FILES = $(ASCIIDOC)
