Makefile.asciidoc.inc: warnings check not default
Only check for asciidoc warnings in "make check" if
ASCIIDOC_WARNINGS_CHECK is set. Enable it in jenkins.sh by using the
new ./configure --enable-asciidoc-warnings-check parameter (similar to
--enable-werror in other Osmocom projects' configure.ac files).

Related: OS#4140
Change-Id: Iac993a0d1b17205397a1f1ef1a7bd3f9df739e36

--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,15 @@ then
 	AC_MSG_ERROR("missing dependencies!")
 fi
 
+# Asciidoc warnings check (OS#4140)
+AC_ARG_ENABLE(asciidoc_warnings_check,
+	[AS_HELP_STRING(
+		[--enable-asciidoc-warnings-check],
+		[Fail the build if asciidoc prints any warnings]
+	)],
+	[asciidoc_warnings_check=$enableval], [asciidoc_warnings_check="no"])
+AM_CONDITIONAL([ASCIIDOC_WARNINGS_CHECK], [test x"$asciidoc_warnings_check" = x"yes"])
+
 AC_OUTPUT(
     osmo-gsm-manuals.pc
     Makefile
