tests/Makefile.am: always put glossary at the end
Make sure that glossary.adoc is the last file, when building the test
pdf with all common chapters included. Otherwise, newer asciidoc
versions will complain that we cannot have subchapters after the
glossary began:

asciidoc: ERROR: mgcp_extension_osmux.adoc: line 2: glossary section cannot contain sub-sections

Related: OS#4183
Change-Id: I91e857255b1b6d5b8708cc7f7b303a58403120d3

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,10 +6,11 @@ EXTRA_DIST = test-usermanual-docinfo.xml \
 # Do not install any of the test pdfs
 OSMO_GSM_MANUALS_NO_INSTALL = 1
 
-# Generate adoc file that includes all chapters
+# Generate adoc file that includes all chapters (OS#4183: glossary.adoc must be the last file)
 ASCIIDOC = test-usermanual.adoc
 ASCIIDOC_DEPS =
-COMMON_CHAPTERS = $(shell find $(OSMO_GSM_MANUALS_DIR)/common/chapters -name '*.adoc')
+COMMON_CHAPTERS = $(shell find $(OSMO_GSM_MANUALS_DIR)/common/chapters -name '*.adoc' | grep -v glossary\.adoc) \
+		  $(OSMO_GSM_MANUALS_DIR)/common/chapters/glossary.adoc
 $(ASCIIDOC): $(COMMON_CHAPTERS)
 	echo ":gfdl-enabled:" > $@
 	echo ":program-name: Test" >> $@
