debian/check-depends.sh: add inkscape to depends
Related: OS#4314
Change-Id: I83864af60ccb1ae4170c2cec90ce3f388cc305ae

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: autotools-dev,
                dblatex,
                docbook5-xml,
                graphviz,
+               inkscape,
                libxml2-utils,
                mscgen,
                python3-nwdiag,
@@ -27,6 +28,7 @@ Depends: ${misc:Depends},
          dblatex,
          docbook5-xml,
          graphviz,
+         inkscape,
          libxml2-utils,
          mscgen,
          python3-nwdiag,
