fix tests/Makefile.am: exclude file 'mgcp_extension_osmux.adoc'
This file is included by 'osmux.adoc', so we end up including it
twice in 'test-usermanual.adoc'.  This makes xsltproc complain:

  /build/tests/test-usermanual.xml:643: element section:
    validity error : ID mgcp-extension-osmux already defined

and sometimes causes sporadic build failures.  Exclude it.

Change-Id: I00efafc822f46126b59d20e86bb07ec991768c28
Related: OS#5112

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -12,7 +12,9 @@ OSMO_GSM_MANUALS_NO_INSTALL = 1
 # Generate adoc file that includes all chapters (OS#4183: glossary.adoc must be the last file)
 ASCIIDOC = test-usermanual.adoc
 ASCIIDOC_DEPS =
-COMMON_CHAPTERS = $(shell find $(OSMO_GSM_MANUALS_DIR)/common/chapters -name '*.adoc' | grep -v glossary\.adoc) \
+COMMON_CHAPTERS = $(shell find $(OSMO_GSM_MANUALS_DIR)/common/chapters -name '*.adoc' \
+			! -name glossary.adoc \
+			! -name mgcp_extension_osmux.adoc) \
 		  $(OSMO_GSM_MANUALS_DIR)/common/chapters/glossary.adoc
 $(ASCIIDOC): $(COMMON_CHAPTERS)
 	echo ":gfdl-enabled:" > $@
