Add new common chapter about QoS, IP DSCP and IEEE 802.1q PCP
Related: SYS#5427
Change-Id: Id344c29eda2a9b3e36376302b425e9db1f6c0f28

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,6 +4,7 @@ EXTRA_DIST = test-usermanual-docinfo.xml \
 	vty \
 	test2-vty-reference.xml \
 	vty-test2 \
+	chapters \
 	$(NULL)
 
 # Do not install any of the test pdfs
