debian: set compat level to 10
Related: OS#5958
Change-Id: I4b2988fffba12cc84ff0834bb9ef0f3d9de2bcda

--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,10 @@
 Source: osmo-gsm-manuals-dev
 Section: devel
 Priority: optional
-Maintainer: Oliver Smith <osmith@sysmocom.de>
+Maintainer: Osmocom team <openbsc@lists.osmocom.org>
 Build-Depends: autotools-dev,
                dh-autoreconf,
-               debhelper (>= 9),
+               debhelper (>= 10),
                pkg-config,
 # All below also need to be in Depends
                asciidoc,
